--- a/index.html
+++ b/index.html
@@ -6,20 +6,42 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+    
+    <div class="bgimage"></div>
     <nav class="topnav">
         <a href="socialmedia.html">Social Media</a>
         <a href="merch.html">Merchandise Store</a>
         <a href="members.html">Members</a>
         <a href="" style="background-color: #ddd; color: red;">Home</a>
-
     </nav>
-    
-    <img src="Neverland_Official_Logo.jpg" class="logo">
 
-    <h1 class="primary-title">(G)I-DLE FANSITE</h1>
-    <br>
-    <h2 class="primary-title">GET TO KNOW EVERYTHING ABOUT (G)I-DLE</h2>
+    <article class="homepageitem">
+        <img src="Neverland_Official_Logo.jpg" class="logo">
+        <h1 class="primary-title">(G)I-DLE FANSITE</h1>
+        <h2 class="primary-title">GET TO KNOW EVERYTHING ABOUT (G)I-DLE</h2>
+    </article>
+
+    <article class="musicvideo">
+        <iframe src="https://www.youtube.com/embed/HPQ5mqovXHo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p><strong>(G)I-DLE's LATEST MUSIC VIDEO</strong></p>
+        <p>
+            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. </strong>
+        </p>
+
+    </article>
+
+    <footer>
+        <p>
+            Official (G)I-DLE Social Medias<br><br>
+        </p>
+        <div class="icons">
+            <img src="facebook.jpg" class="fbicon" >
+            <img src="instagramicon.jpg" class="instagramicon">
+            <img src="twittericon.jpg"class="twittericon">
+        </div>
+    </footer>
+
 </body>
 </html>
