--- a/members.html
+++ b/members.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Members</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="memberbgimage"></div>
 
     <nav class="topnav">
-        <a href="socialmedia.html">Social Media</a>
         <a href="merch.html">Merchandise Store</a>
         <a href="members.html" style="background-color: #ddd; color: red;">Members</a>
         <a href="index.html">Home</a>
@@ -105,15 +106,24 @@
   </div>
     
   <footer>
+    <div class="footerhead">
+        <br><br>
+        <em><u>Official (G)I-DLE Social Media</em></u>
+    </div>
+    <br><br>
+    <div class="icons">
+        <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="facebook.jpg" class="fbicon"></a>
+        <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="instagramicon.jpg" class="instagramicon"></a>
+        <a href="https://twitter.com/g_i_dle?lang=en"><img src="twittericon.jpg"class="twittericon"></a>
+    </div>
+    <br><br>
     <p>
-        Official (G)I-DLE Social Medias<br>
-        <div class="icons">
-        <img src="facebook.jpg" class="fbicon" >
-        <img src="instagramicon.jpg" class="instagramicon">
-        <img src="twittericon.jpg"class="twittericon">
-        </div>
+        Info <span class="dot"></span> Support<br>
+        Privacy Policy <span class="dot"></span> Terms & Condition<br><br>
+        © 2020 Poh Jia Yong
     </p>
-</footer>
+
+  </footer>
     
 </body>
 </html>
