--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     
     <div class="bgimage"></div>
     <nav class="topnav">
-        <a href="socialmedia.html">Social Media</a>
         <a href="merch.html">Merchandise Store</a>
         <a href="members.html">Members</a>
         <a href="" style="background-color: #ddd; color: red;">Home</a>
@@ -33,14 +34,23 @@
     </article>
 
     <footer>
-        <p>
-            Official (G)I-DLE Social Medias<br><br>
-        </p>
-        <div class="icons">
-            <img src="facebook.jpg" class="fbicon" >
-            <img src="instagramicon.jpg" class="instagramicon">
-            <img src="twittericon.jpg"class="twittericon">
+        <div class="footerhead">
+            <br><br>
+            <em><u>Official (G)I-DLE Social Media</em></u>
         </div>
+        <br><br>
+        <div class="icons">
+            <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="facebook.jpg" class="fbicon"></a>
+            <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="instagramicon.jpg" class="instagramicon"></a>
+            <a href="https://twitter.com/g_i_dle?lang=en"><img src="twittericon.jpg"class="twittericon"></a>
+        </div>
+        <br><br>
+        <p>
+            Info <span class="dot"></span> Support<br>
+            Privacy Policy <span class="dot"></span> Terms & Condition<br><br>
+            © 2020 Poh Jia Yong
+        </p>
+
     </footer>
 
 </body>
