--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <article class="homepageitem">
-        <img src="Neverland_Official_Logo.jpg" class="logo">
+        <img src="images/icons/Neverland_Official_Logo.jpg" class="logo">
         <h1 class="primary-title">(G)I-DLE FANSITE</h1>
         <h2 class="primary-title">GET TO KNOW EVERYTHING ABOUT (G)I-DLE</h2>
     </article>
@@ -40,9 +40,9 @@
         </div>
         <br><br>
         <div class="icons">
-            <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="facebook.jpg" class="fbicon"></a>
-            <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="instagramicon.jpg" class="instagramicon"></a>
-            <a href="https://twitter.com/g_i_dle?lang=en"><img src="twittericon.jpg"class="twittericon"></a>
+            <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="images/icons/facebook.jpg" class="fbicon"></a>
+            <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="images/icons/instagramicon.jpg" class="instagramicon"></a>
+            <a href="https://twitter.com/g_i_dle?lang=en"><img src="images/icons/twittericon.jpg"class="twittericon"></a>
         </div>
         <br><br>
         <p>
