--- a/members.html
+++ b/members.html
@@ -21,7 +21,7 @@
     <div class = "row">
 
     <div class="container">
-        <img src="members/soyeon.jpg" alt="Soyeon" class="image">
+        <img src="images/members/soyeon.jpg" alt="Soyeon" class="image">
         <div class="overlay">
           <article class="text">
                 Stage Name:Soyeon(소연)<br><br>
@@ -34,7 +34,7 @@
     </div>
     
     <div class="container">
-        <img src="members/miyeon.jpg" alt="Miyeon" class="image">
+        <img src="images/members/miyeon.jpg" alt="Miyeon" class="image">
         <div class="overlay">
           <article class="text">
                 Stage Name: Miyeon (미연)<br><br>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="container">
-        <img src="members/minnie.jpg" alt="Minnie" class="image">
+        <img src="images/members/minnie.jpg" alt="Minnie" class="image">
         <div class="overlay">
           <article class="text">
                 Stage Name: Minnie (민니)<br><br>
@@ -63,7 +63,7 @@
     </div>
     <div class="row2">
     <div class="container2">
-        <img src="members/soojin.jpg" alt="Soojin" class="image2">
+        <img src="images/members/soojin.jpg" alt="Soojin" class="image2">
         <div class="overlay2">
           <article class="text2">
                 Stage Name: Soojin (수진)<br><br>
@@ -76,7 +76,7 @@
     </div>
 
     <div class="container2">
-        <img src="members/yuqi.jpg" alt="Yuqi" class="image2">
+        <img src="images/members/yuqi.jpg" alt="Yuqi" class="image2">
         <div class="overlay2">
           <article class="text2">
                 Stage Name: Yuqi (우기)<br><br>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="container2">
-        <img src="members/shuhua.jpeg" alt="ShuHua" class="image2">
+        <img src="images/members/shuhua.jpeg" alt="ShuHua" class="image2">
         <div class="overlay2">
           <article class="text2">
                 Stage Name: Shuhua (슈화)<br><br>
@@ -112,9 +112,9 @@
     </div>
     <br><br>
     <div class="icons">
-        <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="facebook.jpg" class="fbicon"></a>
-        <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="instagramicon.jpg" class="instagramicon"></a>
-        <a href="https://twitter.com/g_i_dle?lang=en"><img src="twittericon.jpg"class="twittericon"></a>
+        <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="images/icons/facebook.jpg" class="fbicon"></a>
+        <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="images/icons/instagramicon.jpg" class="instagramicon"></a>
+        <a href="https://twitter.com/g_i_dle?lang=en"><img src="images/icons/twittericon.jpg"class="twittericon"></a>
     </div>
     <br><br>
     <p>
