--- a/merch.html
+++ b/merch.html
@@ -19,26 +19,26 @@
     <div class="row2container">
         <div class="row_album">
             <div class ="item">
-                <img src="album.jpg">
+                <img src="images/merchandise/album.jpg">
                 <button class="btn">Add to Cart</button>
-                <h1>"I Am" Album </h1>
+                <h1><em>"I Am" Album </em></h1>
                 <p><em>Price: <b>SGD$14.99</b></em></p>
                 <br><br><br>
             </div>
 
             <div class ="item">
-                <img src="album2.jpg">
+                <img src="images/merchandise/album2.jpg">
                 <button class="btn">Add to Cart</button>
-                <h1>"Uh Oh" Album</h1>
+                <h1><em>"I Made" Album</em></h1>
                 <p><em>Price: <b>SGD$14.99</b></em></p>
                 <br><br><br>
                 
             </div>
 
             <div class ="item">
-                <img src="album3.jpg">
+                <img src="images/merchandise/album3.jpg">
                 <button class="btn">Add to Cart</button>
-                <h1>"I Trust" Album</h1>
+                <h1><em>"I Trust" Album</em></h1>
                 <p><em>Price: <b>SGD$14.99</b></em></p>
                 <br><br><br>
             </div>
@@ -46,17 +46,17 @@
 
         <div class="row2_album">
             <div class ="item">
-                <img src="album4.jpg">
+                <img src="images/merchandise/album4.jpg">
                 <button class="btn">Add to Cart</button>
-                <h1>"I Made" Album</h1>
+                <h1><em>"Uh Oh" Album</em></h1>
                 <p><em>Price: <b>SGD$14.99</b></em></p>
                 <br><br><br>
             </div>
 
             <div class ="item">
-                <img src="album5.jpg">
+                <img src="images/merchandise/album5.jpg">
                 <button class="btn">Add to Cart</button>
-                <h1>"Lion" Album</h1>
+                <h1><em>"Lion" Album</em></h1>
                 <p><em>Price: <b>SGD$14.99</b></em></p>
                 <br><br><br>   
             </div>
@@ -73,9 +73,9 @@
         </div>
         <br><br>
         <div class="icons">
-            <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="facebook.jpg" class="fbicon"></a>
-            <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="instagramicon.jpg" class="instagramicon"></a>
-            <a href="https://twitter.com/g_i_dle?lang=en"><img src="twittericon.jpg"class="twittericon"></a>
+            <a href="https://www.facebook.com/G.I.DLE.CUBE/"><img src="images/icons/facebook.jpg" class="fbicon"></a>
+            <a href="https://www.instagram.com/official_g_i_dle/?hl=en"><img src="images/icons/instagramicon.jpg" class="instagramicon"></a>
+            <a href="https://twitter.com/g_i_dle?lang=en"><img src="images/icons/twittericon.jpg"class="twittericon"></a>
         </div>
         <br><br>
         <p>
