--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <div class="bgimage"></div>
     <nav class="topnav">
-        <a href="merch.html">Merchandise Store</a>
+        <a href="merch.html">Album Store</a>
         <a href="members.html">Members</a>
         <a href="" style="background-color: #ddd; color: red;">Home</a>
     </nav>
@@ -28,7 +28,7 @@
         <iframe src="https://www.youtube.com/embed/HPQ5mqovXHo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p><strong>(G)I-DLE's LATEST MUSIC VIDEO</strong></p>
         <p>
-            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. </strong>
+            <strong>"Dumdi Dumdi" was described as (G)I-dle's style of a summer dance song. Musically, it is a tropical-based rhythm with moombahton song featuring lyrics that evoke 'hot, cold, passion and excitement' that are reminiscent of summer and youth. </strong>
         </p>
 
     </article>
