--- a/members.html
+++ b/members.html
@@ -12,7 +12,7 @@
     <div class="memberbgimage"></div>
 
     <nav class="topnav">
-        <a href="merch.html">Merchandise Store</a>
+        <a href="merch.html">Album Store</a>
         <a href="members.html" style="background-color: #ddd; color: red;">Members</a>
         <a href="index.html">Home</a>
 
