--- a/merch.html
+++ b/merch.html
@@ -11,7 +11,7 @@
 <body>
     <div class="merchbgimage"></div>
     <nav class="topnav">
-        <a href="merch.html" style="background-color: #ddd; color: red;">Merchandise Store</a>
+        <a href="merch.html" style="background-color: #ddd; color: red;">Album Store</a>
         <a href="members.html">Members</a>
         <a href="index.html">Home</a>
 
